rg-307: * fix stretched image

--- a/frontend/src/bundles/common/components/user-photo-uploader/styles.module.scss
+++ b/frontend/src/bundles/common/components/user-photo-uploader/styles.module.scss
@@ -180,6 +180,9 @@
 }
 
 .uploader_preview__photo {
+    aspect-ratio: 1/1;
+    width: 80px;
+    object-fit: cover;
     border-radius: 50%;
 }
 
